--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,5 +3,5 @@
     <p><%= portfolio_item.title %></p>
     <p><%= portfolio_item.subtitle %></p>
     <p><%= portfolio_item.body %></p>
-    <%= image_tag portfolio_item.main_image %></p>
+    <%= image_tag portfolio_item.main_image unless portfolio_item.main_image.nil? %>
 <% end %>
