--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
         <%= link_to "Register", new_user_registration_path %>
         <%= link_to "Login", new_user_session_path %>
     <% end %>
-     <%= yield %>
+    <%= yield %>
+    <% if session[:source] %>
+        <p>Thanks for visiting me from <%= session[:source] %></p>
+    <% end %>
   </body>
 </html>
