--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -12,7 +12,7 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-  
+    <%= render "shared/nav", location: 'top' %>
     <% if current_user.is_a?(User) %>
         <%= link_to "Logout", destroy_user_session_path, method: :delete %>
     <% else %>
@@ -20,7 +20,6 @@
         <%= link_to "Login", new_user_session_path %>
     <% end %>
     <%= yield %>
-    <%= render "shared/nav" %>
     <% if session[:source] %>
         <p>Thanks for visiting me from <%= session[:source] %></p>
     <% end %>
