--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -17,5 +17,6 @@
     <%= yield %>
     <%= render "shared/nav", location: 'bottom' %>
     <%= source_helper("blog") %>
+    <%= copyright_generator %>
   </body>
 </html>
