--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -16,5 +16,6 @@
     <%= login_helper %>
     <%= yield %>
     <%= source_helper("portfolio") %>
+    <%= copyright_generator %>
   </body>
 </html>
