--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,12 @@
 
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= render "shared/nav", location: 'top' %>
-    <%= login_helper %>
-    <%= yield %>
-    <%= source_helper("application")%>
-    <%= copyright_generator %>
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <%= render "shared/application_nav" %>
+        <%= login_helper %>
+        <%= yield %>
+        <%= source_helper("application")%>
+        <%= copyright_generator %>
+    </div>
   </body>
 </html>
