Updated master layout styles and helper methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,9 @@
   <body>
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <%= render "shared/application_nav" %>
-        <%= login_helper %>
         <%= yield %>
+        <%= render "shared/application_footer" %>
         <%= source_helper("application")%>
-        <%= copyright_generator %>
     </div>
   </body>
 </html>
