--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,14 @@
-<h1>Contact</h1>
-<p><%= number_to_phone('7242319721') %></p>
+<h1 class="text-center">Would you like to work together?</h1>
+<hr>
+<div class="row">
+    <div class="col-md-6 text-center">
+        <h3 class="text-center"><b>Email:</b> <a href="mailto:heather.shockney@minedminds.org?subject=PortfolioContact">Drop me a line</a></h3>
+    </div>
+    <div class="col-md-6 text-center">
+        <h3 class="text-center"><b>Phone:</b> <%= number_to_phone('7242319721') %></h3>  
+    </div>
+    
+</div>
+
 
 
