--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,14 +39,14 @@
                 <%= f.password_field :current_password, autocomplete: "current-password",class: 'form-control' %>
                 </div>
 
-                <div class="actions">
-                <%= f.submit "Update", class: 'btn btn-primary' %>
+                <div class="form-group">
+                <%= f.submit "Update", class: 'btn btn-primary mb-3' %>
                 </div>
                 <% end %>
             </div>
             <div class="col-md-4">
                 <h3>Cancel my account</h3>
-                <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
+                <p>Sorry to see you go! <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
             </div>
         </div>
         <div class="auth-links">
