--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,7 +40,7 @@ body {
 }
 
 .cover-container {
-  max-width: 55em;
+  max-width: 55rem;
 }
 
 
@@ -115,4 +115,9 @@ body {
 }
 .register-text {
     text-align:right;
+}
+.login > .card {
+    width:22rem;
+    margin: 0 auto;
+    float:none;
 }
