--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
 
   <body>
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <div class="cover-container d-flex w-100 h-100 py-3 mx-auto flex-column">
         <%= render "shared/application_nav" %>
         <%= yield %>
         <%= render "shared/application_footer" %>
