--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -4,7 +4,7 @@
       <nav class="nav nav-masthead justify-content-center">
         <%= link_to "Home", root_path, class: 'nav-link' %>
         <%= link_to "About Me", about_me_path, class: 'nav-link' %>
-        <%= link_to "Blogs", blogs_path, class: 'nav-link' %>
+        <%= link_to "Blog", blogs_path, class: 'nav-link' %>
         <%= link_to "Portfolio", portfolios_path, class: 'nav-link' %>
         <%= link_to "Contact", contact_path, class: 'nav-link' %>
         <%= login_helper 'nav-link' %>
