--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -15,14 +15,8 @@
   </head>
 
   <body>
-<div class="blog-masthead">
-    <div class="container">
-        <nav class="nav blog-nav">
-            
-        </nav>
-    </div>
-</div>
-<div class="blog-header">
+<%= render "shared/blog_nav" %>
+<div class="">
     <div class="container">
         <h1 class="blog-title"></h1>
         <p class="lead blog-description"></p>
@@ -30,7 +24,6 @@
 </div>
 <div class="container">
     <div class="row">
-    <%= login_helper %>
     <%= yield %>
     <!-- start of side bar -->
     <aside class="col-md-4 blog-sidebar">
