Implemented pagination with kaminari gem

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -45,12 +45,7 @@
   
    <%= render @blogs %>
    <!-- /.blog-post -->
-
-
-  <nav class="blog-pagination">
-    <a class="btn btn-outline-primary" href="#">Older</a>
-    <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">Newer</a>
-  </nav>
+<%= paginate @blogs %>
 
 </div>
 <p id="notice"><%= notice %></p>
