--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "bootstrap";
+@import "font-awesome";
 /* stylelint-disable selector-list-comma-newline-after */
 /*
  * Masthead for nav
@@ -168,4 +169,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
+}
+/*
+*Custom styles
+*/
+.social-links li {
+    font-size:2.5em;
 }
