--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -16,12 +16,7 @@
 
   <body>
 <%= render "shared/blog_nav" %>
-<div class="">
-    <div class="container">
-        <h1 class="blog-title"></h1>
-        <p class="lead blog-description"></p>
-    </div>
-</div>
+<%= render "shared/blog_masthead" %>
 <div class="container">
     <div class="row">
     <%= yield %>
@@ -30,15 +25,7 @@
     <!--end of side bar -->
     </div>
     <!--start of footer -->
-    <footer class="blog-footer">
-        <div class="text-center">
-            <%= copyright_generator %>    
-        </div>
-        <p>
-            <a href="#">Back to top</a>
-        </p>
-  
-    </footer>
+    <%= render "shared/blog_footer" %>
    <!--end of footer -->
     <%= source_helper("blog") %>
     
