--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -4,19 +4,12 @@
         <p class="mb-0">Ramblings from a forty-something woman making a career as a software developer.</p>
       </div>
 
-      <div class="p-4">
-        <h4 class="font-italic">Archives</h4>
-        <ol class="list-unstyled mb-0">
-          <li><a href="#">June 2019</a></li>
-        </ol>
-      </div>
-
-      <div class="p-4">
+    <div class="p-4">
         <h4 class="font-italic">Elsewhere</h4>
-        <ol class="list-unstyled">
-          <li><a href="https://github.com/hshockney">GitHub</a></li>
-          <li><a href="https://twitter.com/HeatherShockney">Twitter</a></li>
-          <li><a href="https://www.linkedin.com/in/heathershockney/">LinkedIn</a></li>
+        <ol class="list-unstyled social-links">
+          <li><a href="https://github.com/hshockney" target="blank"><%= fa_icon "github" %></a></li>
+          <li><a href="https://twitter.com/HeatherShockney" target="blank"><%= fa_icon "twitter" %></a></li>
+          <li><a href="https://www.linkedin.com/in/heathershockney/" target="blank"><%= fa_icon "linkedin" %></a></li>
         </ol>
-      </div>
-    </aside>
+    </div>
+</aside>
