--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,12 +15,21 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= render "shared/nav", location: 'top' %>
+    <!-- Start of navbar -->
+    <%= render "shared/portfolio_nav" %>
+    <!-- End of navbar -->
+    <!-- Start of Masthead -->
+    <%= render "shared/portfolio_masthead" %>
+    <!-- End of Masthead -->
+    
     <%= login_helper %>
     <%= yield %>
     <%= source_helper("portfolio") %>
-    <%= copyright_generator %>
+    
+    <!-- Start of Footer -->
+    <%= render "shared/portfolio_footer" %>
+    <!-- End of Footer -->
   </body>
 </html>
+
+
