Styled portfolio navbar section

--- a/app/views/shared/_portfolio_footer.html.erb
+++ b/app/views/shared/_portfolio_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="text-muted">
   <div class="container">
     <p class="float-right">
-      <a href="#">Back to top</a>
+      <a href="#">Back to top <%= fa_icon "chevron-up" %></a>
     </p>
     <div class="">
         <%= copyright_generator %>    
