--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "font-awesome";
 .jumbotron {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -33,3 +34,11 @@ footer p {
   margin-bottom: .25rem;
 }
 //Custom Styles
+footer i {
+    font-size:2.5em;
+}
+.navbar-brand img {
+    width:1em;
+    margin-right:2px;
+}
+
