--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -19,7 +19,7 @@
     <%= render "shared/portfolio_nav" %>
     <!-- End of navbar -->
     <!-- Start of Masthead -->
-    <%= render "shared/portfolio_masthead" %>
+    <%= render "shared/portfolio_masthead" unless logged_in?(:site_admin) %>
     <!-- End of Masthead -->
     <%= yield %>
     <%= source_helper("portfolio") %>
