--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,27 +1,35 @@
 <%= form_for(@portfolio_item) do |form| %>
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-   <div class="field">
-    <%= form.label :subtitle %>
-    <%= form.text_field :subtitle %>
-  </div>
-
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
-  </div>
-  <ul>
+ <div class="row">
+    <div class="col-md-6">
+        <div class="form-group">
+        <%= form.label :title %>
+        <%= form.text_field :title, Class:'form-control' %>
+        </div>
+        <div class="form-group">
+        <%= form.label :subtitle %>
+        <%= form.text_field :subtitle, Class:'form-control' %>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="form-group">
+        <%= form.label :body %>
+        <%= form.text_area :body, Class:'form-control',rows:13 %>
+        </div>
+    </div>
+    <hr>
+    <div class="col-md-12">
+        <h2>Technologies Used:</h2>
+    <div>
      <%= form.fields_for :technologies do |technology_form| %>
-      <li>
+      <div class="form-group">
       <%= technology_form.label :name %>
-      <%= technology_form.text_field :name %>
-      </li>
+      <%= technology_form.text_field :name, Class:'form-control' %>
+      </div>
       <% end %>
-  </ul>
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
-
+    </div>
+    <div class="form-group">
+    <%= form.submit 'Save Portfolio Item', Class: 'btn btn-primary btn-block' %>
+    </div>
+    <% end %>
+    </div>
+ </div>
