--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,6 +1,6 @@
 <div class="album py-5 bg-light">
     <div class="container">
-        <div class="row sortable">
+        <div class="row <%= "sortable" if logged_in?(:site_admin) %>">
             <%= render partial: 'portfolio_item', collection: @portfolio_items %>
         </div>
     </div>
