--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -10,6 +10,7 @@ maximize business value.</p>
           <h4 class="text-white">Explore</h4>
           <ul class="list-unstyled">
             <%= nav_helper 'text-white', 'li' %>
+            <li><%= login_helper 'text-white' %></li> 
           </ul>
         </div>
       </div>
