Added fullscreen image to homepage

--- a/app/views/shared/_application_footer.html.erb
+++ b/app/views/shared/_application_footer.html.erb
@@ -1,5 +1,6 @@
     <footer class="mastfoot mt-auto">
         <div class="inner">
-          <p class="text-center"><%= copyright_generator %></p>
+          <p class="text-center app-footer"><%= copyright_generator %></p>
         </div>
     </footer>
+    
