--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
 
   <body>
     <div class="cover-container d-flex w-100 h-100 py-3 mx-auto flex-column">
+        <div id="background"></div>
         <%= render "shared/application_nav" %>
         <%= yield %>
         <%= render "shared/application_footer" %>
