--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,9 +2,10 @@
         <h1 class="cover-heading text-center">Business Focused Developer & UX Mentor.</h1>
         <p class="lead text-center">Software development lead and team builder with experience in many languages, frameworks, and development processes. Project delivery using Ruby, Java, JavaScript, Swift, PHP, HTML, CSS, and SQL deployed to cloud environments including server-less. Managed and mentored team consisting of twelve full stack developers in a continuous learning organization. For the past two years I have worked remotely for teams and clients located throughout the United States.</p>
         <p class="lead text-center">
-          <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary" %>
+          <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-info" %>
         </p>
     </main>
+    
 
    
 
