--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,14 @@
 
   <body>
     <div class="cover-container d-flex w-100 h-100 py-3 mx-auto flex-column">
-        <div id="background"></div>
+        <%= video_tag(
+            'keyboard.mp4',
+            id: 'background',
+            autoplay: true,
+            loop: true,
+            muted: true,
+          )
+        %>
         <%= render "shared/application_nav" %>
         <%= yield %>
         <%= render "shared/application_footer" %>
