--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,6 +1,6 @@
 <header class="masthead mb-auto">
     <div class="inner">
-      <h3 class="masthead-brand">Heather Shockney</h3>
+      <h3 class="masthead-brand app-brand">Heather Shockney</h3>
       <nav class="nav nav-masthead justify-content-center app-nav">
         <%= nav_helper 'nav-link', 'span' %>
         <%= login_helper 'nav-link' %>
