Implemented initial uploading system via carrierwave for portfolio items

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -43,6 +43,9 @@ footer i {
     margin-right:2px;
 }
 
-.portfolio-form {
-    padding:20px;
+.portfolio-container {
+    padding-top: 30px;
+}
+.card img {
+    max-width:100%;
 }
