--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -31,13 +31,14 @@
     <div class="col-md-12">
         <h2>Technologies Used:</h2>
     <div>
-     <%= form.fields_for :technologies do |technology_form| %>
-      <div class="form-group">
-      <%= technology_form.label :name %>
-      <%= technology_form.text_field :name, Class:'form-control' %>
-      </div>
+      <%= form.fields_for :technologies do |technology_form| %>
+         <%= render 'technology_fields', f: technology_form %>
       <% end %>
     </div>
+    <div>
+        <%= link_to_add_association 'Add Technology', form, :technologies %>
+    </div>
+    
     <div class="form-group">
     <%= form.submit 'Save Portfolio Item', Class: 'btn btn-primary btn-block' %>
     </div>
