--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -11,6 +11,11 @@
                     <p><%= tech.name %></p>
                 <% end %>
             <% end %>
+            <% if logged_in?(:site_admin) %>
+            <div class="">
+                <%= link_to "Edit Item", edit_portfolio_path(@portfolio_item), class: 'btn btn-warning' %>    
+            </div>
+            <% end %>
         </div>
     </div>
 </div>
