Added alerts with gritter

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,6 +1,7 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "jquery-ui";
+@import "gritter";
 .jumbotron {
   padding-top: 3rem;
   padding-bottom: 3rem;
