--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -27,6 +27,7 @@
     <!--start of footer -->
     <%= render "shared/blog_footer" %>
    <!--end of footer -->
+    <%= alerts %>
     <%= source_helper("blog") %>
     
 </div>
