--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -22,6 +22,7 @@
     <%= render "shared/portfolio_masthead" unless logged_in?(:site_admin) %>
     <!-- End of Masthead -->
     <%= yield %>
+    <%= alerts %>
     <%= source_helper("portfolio") %>
     
     <!-- Start of Footer -->
