--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-    <main role="main" class="inner cover w-100 mx-auto">
+    <main role="main" class="inner cover w-100 my-auto">
         <h1 class="cover-heading text-center font-color">Business Focused Developer & UX Mentor.</h1>
         <p class="lead text-center font-shadow">Software development lead and team builder with experience in many languages, frameworks, and development processes. Project delivery using Ruby, Java, JavaScript, Swift, PHP, HTML, CSS, and SQL deployed to cloud environments including server-less. Managed and mentored team consisting of twelve full stack developers in a continuous learning organization. For the past two years I have worked remotely for teams and clients located throughout the United States.</p>
         <p class="lead text-center">
