--- a/app/views/pages/tech_news.html.erb
+++ b/app/views/pages/tech_news.html.erb
@@ -1,4 +1,4 @@
-   <main role="main" class="inner cover w-100 mx-auto">
+   <main role="main" class="inner cover w-100 my-auto">
         <h1 class="cover-heading text-center font-color">Women Who Code News</h1>
         <div class="row">
             <% @tweets.each do |tweet| %>
