--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -3,15 +3,7 @@
   <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %>
   <p><%= @blog.body %></p>
   <!-- Start of comment form -->
-  <% unless current_user.is_a? GuestUser %>
-      <%= form_for @comment, url: '#' do |f| %>
-          <div class="form-group">
-              <%= f.label :content %>
-              <%= f.text_area :content, class: 'form-control' %>
-          </div>
-          <%= f.submit 'Post Comment', class: 'btn btn-primary' %>
-      <% end %>
-  <% end %>
+  <%= render 'comments/comment_form' %>
   <!-- Start of comments -->
   <%= render @blog.comments %>
 
