Fixed error with post for comments with actioncable

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -5,7 +5,7 @@
   <!-- Start of comment form -->
   <%= render 'comments/comment_form' %>
   <!-- Start of comments -->
-  <div id="#comments" data-blog-id="<%= @blog.id %>">
+  <div id="comments" data-blog-id="<%= @blog.id %>">
       <%= render @blog.comments %>
   </div>
 </div>
