--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,9 +1,14 @@
 <aside class="col-md-4 blog-sidebar">
-      <div class="p-4 mb-3 bg-light rounded">
+    <div class="p-4 mb-3 bg-light rounded">
         <h4 class="font-italic">About</h4>
         <p class="mb-0">Ramblings from a forty-something woman making a career as a software developer.</p>
-      </div>
-
+    </div>
+    <div class="p-4">
+        <h4>Topics</h4>
+        <% @side_bar_topics.each do |topic| %>
+        <p><%= link_to topic.title, topic_path(topic) %></p>
+        <% end %>
+    </div>
     <div class="p-4">
         <h4 class="font-italic">Elsewhere</h4>
         <ol class="list-unstyled social-links">
