Added breadcrumb for blogs

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,7 +1,6 @@
 <div class="col-md-8 blog-main">
   <h2><%= @blog.title %></h2>
-  <p><%= @blog.topic.title %></p>
-  <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %>
+   <%= render 'blog_breadcrumb' %>
   <p><%= markdown @blog.body %></p>
   <!-- Start of comment form -->
   <%= render 'comments/comment_form' %>
