Changed nav on home and blog to toggle at medium and smaller screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -206,3 +206,10 @@ body {
     color: rgba(255, 255, 255, 0);
     
 }
+.fa-navicon {
+    color: #fff;
+    outline:none;
+}
+.fa-navicon:focus {
+    outline: 0 !important;
+}
