--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,9 +1,15 @@
-<header class="masthead mb-auto">
-    <div class="inner">
-      <h3 class="masthead-brand app-brand">Heather Shockney</h3>
-      <nav class="nav nav-masthead justify-content-center app-nav">
-        <%= nav_helper 'nav-link', 'span' %>
-        <%= login_helper 'nav-link' %>
-      </nav>
+<nav class="navbar navbar-expand-lg text-white font-shadow">
+  <div class="container">
+    <%= link_to "Heather Shockney", root_path, class: 'navbar-brand' %>
+    <button class="navbar-toggler font-shadow" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <i class="fa fa-navicon"></i>
+    </button>
+ 
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+     <ul class="navbar-nav ml-auto">
+       <%= nav_helper 'nav-link', 'span' %>
+       <%= login_helper 'nav-link' %>
+     </ul>
     </div>
-</header>
+  </div>
+</nav>
