--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -50,3 +50,10 @@ footer i {
 .card img {
     max-width:100%;
 }
+.portfolio-source a {
+    color:#fff;
+    font-weight:700;
+}
+.portfolio-source {
+    margin-top: 20px;
+}
