--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -3,6 +3,10 @@
         <h4 class="font-italic">About</h4>
         <p class="mb-0">Ramblings from a forty-something woman making a career as a software developer.</p>
     </div>
+    
+    <div class="p-4 mb-3 bg-info blog-sidebar-source rounded">
+        <%= source_helper("mb-0") %>
+    </div>
     <div class="p-4">
         <h4>Topics</h4>
         <% @side_bar_topics.each do |topic| %>
