--- a/app/views/shared/_portfolio_footer.html.erb
+++ b/app/views/shared/_portfolio_footer.html.erb
@@ -1,11 +1,13 @@
 <footer class="text-muted">
   <div class="container">
-    <p class="float-right">
+   <div class="row">
+    <p class="center-text">
      <%= link_to 'View All Portfolio Items', portfolios_path %> / 
       <a href="#">Back to top <%= fa_icon "chevron-up" %></a>
     </p>
-    <div class="">
-        <%= copyright_generator %>    
+    </div>
+    <div class="row">
+        <p class="center-text"><%= copyright_generator %></p>   
     </div>
   </div>
 </footer>
