--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,14 +1,16 @@
-<div class="container">
+<div class="app-card-container inner cover w-100 my-auto">
+   <div class="card opacity-card">
     <div class="row">
         <div class="col-md-5">
             <%= image_tag "Me.png", class:"about-image", alt: "profile image" %>
         </div>
         <div class="col-md-7 about-me-div">
-            <h1 class="font-shadow-about">About Me</h1>
+            <h1 class="font-shadow-about font-color">About Me</h1>
                 <p class="font-shadow-about"><b>Partnered with clients at all phases of SDLC.</b> Worked with clients from the start of the sales cycle to product inception and creating personas and user stories through to supporting the delivered product post production.</p>
                 <p class="font-shadow-about"><b>Technical trainer assistant</b> for Mined Minds Foundation with topics including Programming fundamentals with Ruby, TDD, SQL, Cloud Deployment, HTML, CSS, JavaScript as well as tools like Slack, Trello, Zoom, Github, and Agile development practices.</p>
                 <p class="font-shadow-about"><b>Led front end portfolio delivery</b> at Mined Minds, a software consultancy. Used UXD training and development experience to bring user research, persona building, affinity mapping, sketching, MVP defining, as well as frontend development coding skills to both consultancy and training organizations.</p>
                 <p class="font-shadow-about"><b>Speaker at technical conferences</b> domestically and internationally, including UX Tools for Developers workshop at BuildStuff Lithuania, UX for the Full Stack Developer at FullStack NYC, and UX Tools for Developers at Abstractions II Pittsburgh, PA.</p>
         </div>
     </div>
+   </div>
 </div>
