--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Looking for my next remote position">
     <meta name="author" content="Heather Shockney">
-    
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
        
    
     <title><%= @page_title %></title>
