--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,16 +1,60 @@
 <div class="app-card-container inner cover w-100 my-auto">
-   <div class="card opacity-card">
-    <div class="row">
-        <div class="col-md-5">
-            <%= image_tag "Me.png", class:"about-image", alt: "profile image" %>
-        </div>
-        <div class="col-md-7 about-me-div">
-            <h1 class="font-shadow-about font-color">About Me</h1>
+    <div class="card opacity-card">
+        <div class="row">
+            <div class="col-md-5 p-5">
+                <%= image_tag "Me.png", class:"about-image", alt: "profile image" %>
+            </div>
+            <div class="col-md-7 about-me-div p-5">
+                <h1 class="font-shadow-about font-color">About Me</h1>
                 <p class="font-shadow-about"><b>Partnered with clients at all phases of SDLC.</b> Worked with clients from the start of the sales cycle to product inception and creating personas and user stories through to supporting the delivered product post production.</p>
-                <p class="font-shadow-about"><b>Technical trainer assistant</b> for Mined Minds Foundation with topics including Programming fundamentals with Ruby, TDD, SQL, Cloud Deployment, HTML, CSS, JavaScript as well as tools like Slack, Trello, Zoom, Github, and Agile development practices.</p>
-                <p class="font-shadow-about"><b>Led front end portfolio delivery</b> at Mined Minds, a software consultancy. Used UXD training and development experience to bring user research, persona building, affinity mapping, sketching, MVP defining, as well as frontend development coding skills to both consultancy and training organizations.</p>
                 <p class="font-shadow-about"><b>Speaker at technical conferences</b> domestically and internationally, including UX Tools for Developers workshop at BuildStuff Lithuania, UX for the Full Stack Developer at FullStack NYC, and UX Tools for Developers at Abstractions II Pittsburgh, PA.</p>
+                <p>
+                    <button
+                    class="btn btn-primary"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#jobHistory"
+                    aria-expanded="false"
+                    aria-controls="jobHistory"
+                    >
+                    Job History
+                    </button>
+                    <button
+                    class="btn btn-primary"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#courses"
+                    aria-expanded="false"
+                    aria-controls="courses"
+                    >
+                    Courses
+                    </button>
+                </p>
+                <p>
+                    <div class="collapse" id="jobHistory">
+                        <div class="card card-body">
+                            <p class="font-shadow-about"><b>Mined Minds</b></p>
+                            <small class="font-shadow-about"><b>2015 - Current</b></small>
+                            <p class="font-shadow-about">Technical trainer assistant for Mined Minds Foundation with topics including Programming fundamentals with Ruby, TDD, SQL, Cloud Deployment, HTML, CSS, JavaScript as well as tools like Slack, Trello, Zoom, Github, and Agile development practices.</p>
+                            <p class="font-shadow-about">Led front end portfolio delivery at Mined Minds, a software consultancy. Used UXD training and development experience to bring user research, persona building, affinity mapping, sketching, MVP defining, as well as frontend development coding skills to both consultancy and training organizations.</p>
+                        </div>
+                    </div>
+                </p>
+                <p>
+                    <div class="collapse" id="courses">
+                        <div class="card card-body">
+                            <p class="font-shadow-about"><b>General Assembly User Experience Design Circuit</b></p>
+                            <small class="font-shadow-about"><b>April 2018</b></small>
+                            <p class="font-shadow-about">Conducted user research and interviews to drive design process, and compiled a competitive analysis to identify target market.</p>
+                            <p class="font-shadow-about">Built a primary user persona, defined product’s purpose, and found design direction.</p>
+                            <p class="font-shadow-about">Organized complex and diverse types of content using key information architecture techniques, and mapped user flows.</p>
+                            <p class="font-shadow-about">Used responsive design patterns to build out hi-fi wireframes that enabled testing projects with real users.</p>
+                            <p class="font-shadow-about">Validated design with users, and improve it by incorporating their feedback.</p>
+                            <p class="font-shadow-about">Compiled everything learned into a presentation showcasing my design process.</p>
+                        </div>
+                    </div>
+                </p>
+            </div>
         </div>
     </div>
-   </div>
 </div>
