Added progress bars for skills on about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,6 +3,24 @@
         <div class="row">
             <div class="col-md-5 p-5">
                 <%= image_tag "Me.png", class:"about-image", alt: "profile image" %>
+                <div class="skills">
+                    <% @skills.each do |skill| %>
+                        <div class="skill">
+                            <h4><%= skill.title %></h4>
+                            <div class="progress">
+                                <div 
+                                   class="progress-bar progress-bar-striped bg-info"
+                                   role="progressbar"
+                                   aria-valuenow="<%= skill.percent_utilized %>"
+                                   aria-valuemax="100"
+                                   style="width: <%= skill.percent_utilized %>%"
+                                   >
+
+                                </div>
+                            </div>
+                        </div>
+                    <% end %>
+                </div>
             </div>
             <div class="col-md-7 about-me-div p-5">
                 <h1 class="font-shadow-about font-color">About Me</h1>
