Integrated custom fonts

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -62,9 +62,6 @@
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
-}
 
 .display-4 {
   font-size: 2.5rem;
@@ -201,4 +198,17 @@ h1, h2, h3, h4, h5, h6 {
 }
 .blog-sidebar-source {
     margin-top: 20px;
+}
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6,
+input, p,
+select {
+    font-family: 'Merriweather', serif;   
+}
+body {
+    font-family: 'Merriweather', serif; 
 }
