--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -60,3 +60,16 @@ footer i {
 .center-text {
     margin: 0 auto!important;
 }
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6,
+input, p,
+select {
+    font-family: 'Merriweather', serif;   
+}
+body {
+    font-family: 'Merriweather', serif; 
+}
