--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,8 @@
     <meta name="description" content="Looking for my next remote position">
     <meta name="author" content="Heather Shockney">
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-       
-   
     <title><%= @page_title %></title>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="keywords" content= "<%= @seo_keywords %>" />
