--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,6 @@
 <div class="contact-card-container inner cover w-100 my-auto">
    <div class="card opacity-card">
-        <h1 class="text-center">Would you like to work together?</h1>
+        <h1 class="text-center my-3">Would you like to work together?</h1>
         <hr>
         <div class="text-center contact-details">
                 <h3 class="text-center"><b>Email:</b> <a href="mailto:heather.shockney@minedminds.org?subject=PortfolioContact">Drop me a line</a></h3>
