--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,8 +40,19 @@ body {
   color: #fff;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  font-family: 'Merriweather', serif;
 }
 
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6,
+input, p,
+select {
+    font-family: 'Merriweather', serif;   
+}
 .cover-container {
   margin-right: auto;
   margin-left: auto;
@@ -179,7 +190,7 @@ body {
     color: #17a2b8;
 }
 .font-shadow {
-    text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
+    text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 1);
 }
 .font-shadow-about {
     text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.9);
