--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -6,6 +6,7 @@
     <meta name="description" content="Blog about being a woman in tech">
     <meta name="author" content="Heather Shockney">
     <title><%= @page_title %></title>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="keywords" content= "<%= @seo_keywords %>" />
