--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -20,10 +20,10 @@
     %>
   </div>
   <div class="form-group">
-      <%=form.radio_button :status, 'draft' %>
-      <%= form.label :status, 'Draft' %>
-      <%=form.radio_button :status, 'published' %>
-      <%= form.label :status, 'Published' %>
+      <%=form.radio_button :status1, 'draft' %>
+      <%= form.label :status1, 'Draft' %>
+      <%=form.radio_button :status1, 'published' %>
+      <%= form.label :status1, 'Published' %>
   </div>
 
   <div class="form-group">
