--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -4,7 +4,7 @@
         <div class="col-md-5"><h1><%= @portfolio_item.title %></h1>
            <hr>
             <em><%= @portfolio_item.subtitle %></em>
-            <p><%= @portfolio_item.body %></p>
+            <p><%= markdown @portfolio_item.body %></p>
             <% if @portfolio_item.technologies.length > 0 %>
                 <h3>Technologies Used:</h3>
                 <% @portfolio_item.technologies.each do |tech| %>
