Changed heading for featured blog

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -24,7 +24,7 @@
     <div class="col-md-6">
       <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success">Design</strong>
+          <strong class="d-inline-block mb-2 text-success">UX</strong>
           <h3 class="mb-0">UX Resources</h3>
           <div class="mb-1 text-muted">June 12, 2019</div>
           <p class="mb-auto">A list of great UX resources.</p>
