Removed skill progress bars until I figure out how I want to represent my exp with each skill

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,7 +3,9 @@
         <div class="row">
             <div class="col-md-5 p-5">
                 <%= image_tag "Me.png", class:"about-image", alt: "profile image" %>
+<!--
                 <div class="skills">
+                   <h4 class="skills-headline">Years of Experience</h4>
                     <% @skills.each do |skill| %>
                         <div class="skill">
                             <h4><%= skill.title %></h4>
@@ -21,6 +23,7 @@
                         </div>
                     <% end %>
                 </div>
+-->
             </div>
             <div class="col-md-7 about-me-div p-5">
                 <h1 class="font-shadow-about font-color">About Me</h1>
