Updated featured blog posts

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -10,11 +10,11 @@
     <div class="col-md-6">
       <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-primary">Rails Development</strong>
-          <h3 class="mb-0">Featured post</h3>
-          <div class="mb-1 text-muted">June 12, 2019</div>
-          <p class="card-text mb-auto">A look at my experience learning Rails.</p>
-          <a href="/blogs/my-first-rails-project" class="stretched-link">Continue reading</a>
+          <strong class="d-inline-block mb-2 text-primary">Career</strong>
+          <h3 class="mb-0">Featured Post</h3>
+          <div class="mb-1 text-muted">June 20, 2019</div>
+          <p class="card-text mb-auto">Looking for a Remote Position</p>
+          <a href="/blogs/i-am-looking-for-a-new-remote-position" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
         
@@ -24,11 +24,11 @@
     <div class="col-md-6">
       <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success">UX</strong>
-          <h3 class="mb-0">UX Resources</h3>
-          <div class="mb-1 text-muted">June 12, 2019</div>
-          <p class="mb-auto">A list of great UX resources.</p>
-          <a href="/blogs/ux-resources" class="stretched-link">Continue reading</a>
+          <strong class="d-inline-block mb-2 text-success">Projects</strong>
+          <h3 class="mb-0">Featured Post </h3>
+          <div class="mb-1 text-muted">June 27, 2019</div>
+          <p class="mb-auto">Projects I Have Built Recently.</p>
+          <a href="/blogs/projects-built-with-boostrap-4" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
         
