Adjusted font for card on blog

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -13,7 +13,7 @@
           <strong class="d-inline-block mb-2 text-primary">Career</strong>
           <h3 class="mb-0">Featured Post</h3>
           <div class="mb-1 text-muted">June 20, 2019</div>
-          <p class="card-text mb-auto">Looking for a Remote Position</p>
+          <p class="card-title mb-auto">Looking for a Remote Position</p>
           <a href="/blogs/i-am-looking-for-a-new-remote-position" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
@@ -27,7 +27,7 @@
           <strong class="d-inline-block mb-2 text-success">Projects</strong>
           <h3 class="mb-0">Featured Post </h3>
           <div class="mb-1 text-muted">June 27, 2019</div>
-          <p class="mb-auto">Projects I Have Built Recently.</p>
+          <p class="mb-auto card-title">Projects I Have Built Recently.</p>
           <a href="/blogs/projects-built-with-boostrap-4" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
