Added text to featured blog posts

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -13,7 +13,7 @@
           <strong class="d-inline-block mb-2 text-primary">Career</strong>
           <h3 class="mb-0">Featured Post</h3>
           <div class="mb-1 text-muted">June 20, 2019</div>
-          <p class="mb-auto"><b>Looking for a Remote Position</b></p>
+          <p class="mb-auto">To continue growing as a developer, I am looking for a new role. I am hoping to find something that allows me to work remotely since I have been doing this for the past two years.</p>
           <a href="/blogs/i-am-looking-for-a-new-remote-position" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
@@ -27,7 +27,7 @@
           <strong class="d-inline-block mb-2 text-success">Projects</strong>
           <h3 class="mb-0">Featured Post </h3>
           <div class="mb-1 text-muted">June 27, 2019</div>
-          <p class="mb-auto"><b>Projects I Have Built Recently.</b></p>
+          <p class="mb-auto">Some of the projects I have recently built using Bootstrap 4.</p>
           <a href="/blogs/projects-built-with-boostrap-4" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
