took care of error when eleemnt wasnt on page for typedJs

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
-<div class="contact-card-container inner cover w-100 my-auto">
+  <div class="contact-card-container inner cover w-100 my-auto">
    <div class="card opacity-card">
         <h1 class="text-center my-3">Would you like to work together?</h1>
         <hr>
@@ -8,8 +8,7 @@
         </div>
            
         <div class="LI-profile-badge linkedin-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="heathershockney"><a class="LI-simple-link" href='https://www.linkedin.com/in/heathershockney?trk=profile-badge' target="blank">Heather Shockney</a></div>   
-        
+     <span class="element" id="typedJs" style="display:none;"></span>   
     </div>
 </div>
-
 
