--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   </head>
 
 
-  <body>
+  <body class = "<%= controller_name %> <%= action_name %>">
     <div class="cover-container d-flex  py-3 mx-auto flex-column">
         <%= video_tag(
             'keyboard.mp4',
