Adding span to blog and portfolio to get rid of error

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -30,7 +30,7 @@
     <%= render "shared/blog_footer" %>
    <!--end of footer -->
     <%= alerts %>
-
+<span class="element" id="typedJs" style="display:none;"></span> 
     
 </div>
  
