--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -30,6 +30,7 @@
     <!-- Start of Footer -->
     <%= render "shared/portfolio_footer" %>
     <!-- End of Footer -->
+    <span class="element" id="typedJs" style="display:none;"></span> 
   </body>
 </html>
 
