Changed bold to em for accessibility

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -27,8 +27,8 @@
             </div>
             <div class="col-md-7 about-me-div p-5">
                 <h1 class="font-shadow-about font-color">About Me</h1>
-                <p class="font-shadow-about"><b>Partnered with clients at all phases of SDLC.</b> Worked with clients from the start of the sales cycle to product inception and creating personas and user stories through to supporting the delivered product post production.</p>
-                <p class="font-shadow-about"><b>Speaker at technical conferences</b> domestically and internationally, including UX Tools for Developers workshop at BuildStuff Lithuania, UX for the Full Stack Developer at FullStack NYC, and UX Tools for Developers at Abstractions II Pittsburgh, PA.</p>
+                <p class="font-shadow-about"><em>Partnered with clients at all phases of SDLC.</em> Worked with clients from the start of the sales cycle to product inception and creating personas and user stories through to supporting the delivered product post production.</p>
+                <p class="font-shadow-about"><em>Speaker at technical conferences</em> domestically and internationally, including UX Tools for Developers workshop at BuildStuff Lithuania, UX for the Full Stack Developer at FullStack NYC, and UX Tools for Developers at Abstractions II Pittsburgh, PA.</p>
                 <p>
                     <button
                     class="btn btn-primary"
@@ -54,8 +54,8 @@
                 <p>
                     <div class="collapse" id="jobHistory">
                         <div class="card card-body">
-                            <p class="font-shadow-about"><b>Mined Minds</b></p>
-                            <small class="font-shadow-about"><b>2015 - Current</b></small>
+                            <p class="font-shadow-about"><em>Mined Minds</em></p>
+                            <small class="font-shadow-about"><em>2015 - Current</em></small>
                             <p class="font-shadow-about">Technical trainer assistant for Mined Minds Foundation with topics including Programming fundamentals with Ruby, TDD, SQL, Cloud Deployment, HTML, CSS, JavaScript as well as tools like Slack, Trello, Zoom, Github, and Agile development practices.</p>
                             <p class="font-shadow-about">Led front end portfolio delivery at Mined Minds, a software consultancy. Used UXD training and development experience to bring user research, persona building, affinity mapping, sketching, MVP defining, as well as frontend development coding skills to both consultancy and training organizations.</p>
                         </div>
@@ -64,8 +64,8 @@
                 <p>
                     <div class="collapse" id="courses">
                         <div class="card card-body">
-                            <p class="font-shadow-about"><b>General Assembly User Experience Design Circuit</b></p>
-                            <small class="font-shadow-about"><b>April 2018</b></small>
+                            <p class="font-shadow-about"><em>General Assembly User Experience Design Circuit</em></p>
+                            <small class="font-shadow-about"><em>April 2018</em></small>
                             <p class="font-shadow-about">Conducted user research and interviews to drive design process, and compiled a competitive analysis to identify target market.</p>
                             <p class="font-shadow-about">Built a primary user persona, defined product’s purpose, and found design direction.</p>
                             <p class="font-shadow-about">Organized complex and diverse types of content using key information architecture techniques, and mapped user flows.</p>
