--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -3,8 +3,8 @@
         <h1 class="text-center my-3">Would you like to work together?</h1>
         <hr>
         <div class="text-center contact-details">
-                <h3 class="text-center"><b>Email:</b> <a href="mailto:heather.shockney@minedminds.org?subject=PortfolioContact" target="blank">Drop me a line</a></h3>
-                <h3 class="text-center"><b>Phone:</b> <%= number_to_phone('7242319721') %></h3>  
+                <h3 class="text-center"><em>Email:</em> <a href="mailto:heather.shockney@minedminds.org?subject=PortfolioContact" target="blank">Drop me a line</a></h3>
+                <h3 class="text-center"><em>Phone:</em> <%= number_to_phone('7242319721') %></h3>  
         </div>
            
         <div class="LI-profile-badge linkedin-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="heathershockney"><a class="LI-simple-link" href='https://www.linkedin.com/in/heathershockney?trk=profile-badge' target="blank">Heather Shockney</a></div>   
