--- a/app/views/pages/tech_news.html.erb
+++ b/app/views/pages/tech_news.html.erb
@@ -13,3 +13,8 @@
         </div>
     </main>
 <span class="element" id="typedJs" style="display:none;"></span> 
+<style>
+    .typed-cursor {
+      display: none;
+    }  
+</style>
