--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -14,7 +14,11 @@
     <%= stylesheet_link_tag    'portfolios', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+  <style>
+    .typed-cursor {
+      display: none;
+    }  
+  </style>
 
   <body>
     <!-- Start of navbar -->
