--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -88,8 +88,8 @@
                 <p>
                     <div class="collapse" id="resume">
                         <div class="card card-body">
-                           <p class="font-shadow-about">Here is my current resume. Happy to answer any questions you may have, just <%= link_to "Contact Me", contact_path, class: "font-color"%>.</p>
-                            <%= link_to "View Resume", "https://portfoliohs.s3.amazonaws.com/pdf/HeatherShockneyResumeSinglePage2019.pdf", :target => "_blank", class: "font-color"%>
+                           <p class="font-shadow-about">Here is my current resume. Happy to answer any questions you may have, just <%= link_to "Contact Me", contact_path, class: "font-color link-contact"%>.</p>
+                            <%= link_to "View Resume", "https://portfoliohs.s3.amazonaws.com/pdf/HeatherShockneyResumeSinglePage2019.pdf", :target => "_blank", class: "font-color link-contact"%>
                         </div>
                     </div>
                 </p>
