Updated email address

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -3,7 +3,7 @@
         <h1 class="text-center my-3">Would you like to work together?</h1>
         <hr>
         <div class="text-center contact-details">
-                <h3 class="text-center"><em>Email:</em> <a href="mailto:heather.shockney@minedminds.org?subject=PortfolioContact" target="blank">Drop me a line</a></h3>
+                <h3 class="text-center"><em>Email:</em> <a href="mailto:heathercshockney@gmail.com?subject=PortfolioContact" target="blank">Drop me a line</a></h3>
                 <h3 class="text-center"><em>Phone:</em> <a href="tel:+1-724-231-9721">(724)-231-9721</a></h3>  
         </div>
            
